Fixed fade and wrap of slides.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@ body {
   animation-duration: 1.5s;
 }
 
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
 #about-text {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
